syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  int32 Age = 2;
  repeated WeatherForecast weatherForecasts = 3;
  repeated int32  IDs = 4;
}

message WeatherForecast {
   string Date=1;
   int32 TemperatureC=2;
   int32 TemperatureF=3;
   string Summary=4;
}
